gcc/testsuite/algol68/compile/error-stropping-keyword-2.a68
# { dg-options "-fstropping=upper" } #
BEGIN FOR i TO 10 SKIP OD # { dg-error "DO" } #
END
